implement command button css

--- a/ERPSolution/ERPWebApplication/CSS/default.css
+++ b/ERPSolution/ERPWebApplication/CSS/default.css
@@ -63,7 +63,7 @@
 {
     font-size: 10pt;
 	border: None;
-	background-color: #BDDAEA;
+	background-color: red;
 	color: #333333;
     font-family :Arial ;
     height :26px;
