--- a/ERPSolution/ERPWebApplication/Content/Site.css
+++ b/ERPSolution/ERPWebApplication/Content/Site.css
@@ -259,7 +259,7 @@ ul#menu {
     color: #3e5667;
     /*padding: 20px 40px 30px 40px;*/
     /*padding: 5px 40px 3px 165px;*/ /*edited*/
-    padding: 4px 40px 4px 165px; 
+    padding: 4px 40px 4px 165px;
 }
 
 .featured hgroup.title h1, .featured hgroup.title h2 {
@@ -439,14 +439,12 @@ label {
 }
 
     label.checkbox {
-        display: inline ;
-       
-        
+        display: inline;
     }
 
 input, textarea {
     /*border: 1px solid #e2e2e2;*/
-    border: 1px solid ;
+    border: 1px solid;
     background: #fff;
     color: #333;
     font-size: 1.2em;
@@ -468,13 +466,52 @@ input[type="checkbox"] {
     background: transparent;
     border: inherit;
     width: auto;
-       
 }
+
+input[type=radio] {
+    display: none;
+}
+
+    input[type=radio] + label {
+        border-left: 1px solid #e6e6e6;
+    border-right: 1px solid #e6e6e6;
+    border-top: 1px solid #e6e6e6;
+    border-bottom: 1px solid #b3b3b3;
+    display: inline-block;
+        padding: 4px 12px;
+        margin-bottom: 0;
+        font-size: 14px;
+        line-height: 20px;
+        color: #333;
+        text-align: center;
+        text-shadow: 0 1px 1px rgba(255,255,255,0.75);
+        vertical-align: middle;
+        cursor: pointer;
+        background-color: #f5f5f5;
+        background-repeat: repeat-x;
+        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    background-image: linear-gradient(to bottom,#fff,#e6e6e6);
+    margin-left: -2px;
+    margin-right: -2px;
+    margin-top: -2px;
+}
+
+    input[type=radio]:checked + label {
+        background-image: none;
+        outline: 0;
+        -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
+        -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
+        box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
+        background-color: #e0e0e0;
+    }
+
 
 input[type="submit"],
 input[type="button"],
 button {
-    /*background-color: #d3dce0;*/    
+    /*background-color: #d3dce0;*/
     border: 1px solid #787878;
     cursor: pointer;
     font-size: 1.2em;
@@ -502,7 +539,6 @@ select {
     padding: 5px;*/
     width: 262px;
     font-family: inherit;
-    
 }
 /* For Dropdownlist End */
 /* info and errors */
@@ -547,7 +583,6 @@ input.input-validation-error {
 
 input[type="checkbox"].input-validation-error {
     border: 0 none;
-   
 }
 
 .validation-summary-errors {
@@ -810,44 +845,38 @@ tr.pager td {
 /*FOR WEB SERVICES*/
 
 
-.autocomplete_completionListElement 
-{  
-	visibility : hidden;
-	margin : 0px!important;
-	color : windowtext;
-	border : buttonshadow;
-	border-width : 1px;
-	border-style : solid;
-	cursor :default;
-	overflow : auto;
-	height : 270px;
-    text-align : left; 
-    list-style-type : none;
-    background-color:#FFFFFF;
-    z-index:999999;
-    position:relative;
+.autocomplete_completionListElement {
+    visibility: hidden;
+    margin: 0px!important;
+    color: windowtext;
+    border: buttonshadow;
+    border-width: 1px;
+    border-style: solid;
+    cursor: default;
+    overflow: auto;
+    height: 270px;
+    text-align: left;
+    list-style-type: none;
+    background-color: #FFFFFF;
+    z-index: 999999;
+    position: relative;
 }
 
 /* AutoComplete highlighted item */
 
-.autocomplete_highlightedListItem
-{
-	background-color: #ffff99;
-	color: black;
-	padding: 1px;
-	cursor:pointer;
-    z-index:999999;
+.autocomplete_highlightedListItem {
+    background-color: #ffff99;
+    color: black;
+    padding: 1px;
+    cursor: pointer;
+    z-index: 999999;
 }
 
 /* AutoComplete item */
 
-.autocomplete_listItem 
-{
-	background-color : window;
-	color : windowtext;
-	padding : 1px;
-     z-index:999999;
+.autocomplete_listItem {
+    background-color: window;
+    color: windowtext;
+    padding: 1px;
+    z-index: 999999;
 }
-
-
-
