--- a/ERPSolution/ERPWebApplication/Site.Master
+++ b/ERPSolution/ERPWebApplication/Site.Master
@@ -70,7 +70,11 @@
                                 <asp:MenuItem NavigateUrl="~/Default.aspx" Text="HRMS">
                                     <asp:MenuItem NavigateUrl="~/Default.aspx" Text="MasterPage">
                                         <asp:MenuItem NavigateUrl="~/ModuleName/HRMS/MasterPage/CompanySetupForm.aspx" Text="Company Setup" Value="11"></asp:MenuItem>
-                                        <asp:MenuItem NavigateUrl="~/ModuleName/HRMS/MasterPage/EmployeeSetupForm.aspx" Text="Employee Setup" Value="12"></asp:MenuItem>
+                                        <asp:MenuItem NavigateUrl="~/ModuleName/HRMS/MasterPage/OrganizationalChartForm.aspx" Text="Organizational Chart" Value="12"></asp:MenuItem>
+                                        <asp:MenuItem NavigateUrl="~/ModuleName/HRMS/MasterPage/EmployeeSetupForm.aspx" Text="Employee Setup" Value="13"></asp:MenuItem>
+                                    </asp:MenuItem>
+                                    <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Approval">
+                                        <asp:MenuItem NavigateUrl="~/ModuleName/Approval/frmProcessDetail.aspx" Text="Process Detail" Value="12"></asp:MenuItem>
                                     </asp:MenuItem>
                                 </asp:MenuItem>
 
